# codex-computer-use-mcp

./: .gitignore  README.md  pyproject.toml
docs/skills/: computer-use-human-mode.md
examples/: hermes-config.yaml  mcp-config.json
src/codex_computer_use_mcp/: __init__.py  server.py
