[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-computer-use-mcp"
version = "0.1.0"
description = "Expose Codex Desktop Computer Use as a local MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Qiyao" }]
dependencies = [
  "mcp>=1.9.4",
  "websockets>=15.0",
]
keywords = ["mcp", "codex", "computer-use", "desktop-automation", "macos"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Libraries",
]

[project.scripts]
codex-computer-use-mcp = "codex_computer_use_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
